added ngx toastr for notification

--- a/src/app/customer/add-customer/add-customer.component.html
+++ b/src/app/customer/add-customer/add-customer.component.html
@@ -1,1 +1,12 @@
-<p>add-customer works!</p>
+<!-- <form class="c-form" [formGroup]="addCustomerForm" (ngSubmit)="onSubmit()">
+    <input
+        class="c-form__input"
+        type="text"
+        formControlName="name"
+        placeholder="to-do item"
+        required
+    />
+    <button class="c-form__button" type="submit" [disabled]="!addCustomerForm.valid">
+        Create Item
+    </button>
+</form> -->
