--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
 <p *ngIf="errorMsg$ | async  as error"> {{ error }} </p>
-
-<router-outlet></router-outlet>
+<div class="card-header">
+    <a [routerLink]="['/add-customer/']" class="btn btn-primary" role="button" aria-disabled="true">Add Customer</a>
+    <a [routerLink]="['/home/']" class="btn btn-primary" role="button" aria-disabled="true">Home</a>
+</div>
+<div class="container text-center">
+    <router-outlet></router-outlet>
+</div>
