--- a/src/app/customer/add-customer/add-customer.component.html
+++ b/src/app/customer/add-customer/add-customer.component.html
@@ -1,12 +1,23 @@
-<!-- <form class="c-form" [formGroup]="addCustomerForm" (ngSubmit)="onSubmit()">
-    <input
-        class="c-form__input"
-        type="text"
-        formControlName="name"
-        placeholder="to-do item"
-        required
-    />
-    <button class="c-form__button" type="submit" [disabled]="!addCustomerForm.valid">
-        Create Item
-    </button>
-</form> -->
+<form [formGroup]="addCustomerForm" (ngSubmit)="onSubmit()">
+    <div class="form-row">
+      <div class="form-group col-md-6">
+        <label for="inputName">Name</label>
+        <input type="text" class="form-control" formControlName="name" required id="inputName" placeholder="Name">
+      </div>
+      <div class="form-group col-md-6">
+        <label for="inputEmail">Email</label>
+        <input type="email" class="form-control" formControlName="email" required id="inputEmail" placeholder="Email">
+      </div>
+    </div>
+    <div class="form-row">
+        <div class="form-group col-md-6">
+          <label for="inputPhone">Phone</label>
+          <input type="text" class="form-control" formControlName="phone" required id="inputPhone" placeholder="Phone">
+        </div>
+        <div class="form-group col-md-6">
+          <label for="inputAddress">Address</label>
+          <input type="text" class="form-control" formControlName="address" required id="inputAddress" placeholder="Address">
+        </div>
+      </div>
+    <button type="submit" class="btn btn-primary" [disabled]="!addCustomerForm.valid">Create Customer</button>
+  </form>
