--- a/src/app/customer/customer-details/customer-details.component.html
+++ b/src/app/customer/customer-details/customer-details.component.html
@@ -1,1 +1,10 @@
-<p>customer-details works!</p>
+  <div class="card mb-3" *ngIf="customerDetails$ | async as data">
+    <img src="..." class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Name: {{ data.name }}</h5>
+      <h5 class="card-title">Email: {{ data.email }}</h5>
+      <h5 class="card-title">Phone: {{ data.phone }}</h5>
+      <h5 class="card-title">Address: {{ data.address }}</h5>
+      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    </div>
+  </div>
