--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,20 @@
-<div *ngFor="let customer of customersList$ | async">
-    <a [routerLink]="['/customer-details/', customer.id]" >{{ customer.name }}</a>
-</div>
+<table class="table table-hover">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Name</th>
+        <th scope="col">Email</th>
+        <th scope="col">Phone</th>
+        <th scope="col">Address</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let customer of ( customersList$ | async ); let idx = index;" (click)="checkCustomerDetails(customer)">
+        <th scope="row">{{idx + 1}}</th>
+        <td>{{customer.name}}</td>
+        <td>{{customer.email}}</td>
+        <td>{{customer.phone}}</td>
+        <td>{{customer.address}}</td>
+      </tr>
+    </tbody>
+  </table>
