--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,15 +6,17 @@
         <th scope="col">Email</th>
         <th scope="col">Phone</th>
         <th scope="col">Address</th>
+        <th scope="col"></th>
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let customer of ( customersList$ | async ); let idx = index;" (click)="checkCustomerDetails(customer)">
+      <tr *ngFor="let customer of ( customersList$ | async ); let idx = index;">
         <th scope="row">{{idx + 1}}</th>
         <td>{{customer.name}}</td>
         <td>{{customer.email}}</td>
         <td>{{customer.phone}}</td>
         <td>{{customer.address}}</td>
+        <td><button class="btn btn-primary btn-sm" (click)="checkCustomerDetails(customer)">Details</button></td>
       </tr>
     </tbody>
   </table>
